@@ -1,0 +1,31 @@
+static const char *AutoBackup_xpm[] = {
+"25 25 3 1",
+"  c #FF7F27",
+". c none",
+"X c #DDDDDD",
+".....XXXXXXXXXXXXXXXX....",
+"....XX..............XX...",
+"....X....         ...XX..",
+"...XX..            ...XX.",
+"..XXX               .XXXX",
+".XX.XX             XXX..X",
+"XX.. XX           XX  ..X",
+"X..   XX         XX   ..X",
+"X..    XX.......XX     .X",
+"X.      .........      .X",
+"X.     ...........     .X",
+"X.     ...........     .X",
+"X.     ...........     .X",
+"X.     ...........     .X",
+"X.     ...........     .X",
+"X.      ..........     .X",
+"X.     XX........X     .X",
+"X.    XX  .....  XX   ..X",
+"X..  XX           XX  ..X",
+"X.. XX             XXX..X",
+"XX..X               .X..X",
+".XXXX              ..XXXX",
+"..XX...           ....XX.",
+"...XX................XX..",
+"....XXXXXXXXXXXXXXXXXX..."
+};
